--- a/index.html
+++ b/index.html
@@ -157,26 +157,47 @@
             width: 960px;
         }
 
-        .typed-cursor{
+        .typed-cursor {
             opacity: 1;
             -webkit-animation: blink 0.7s infinite;
             -moz-animation: blink 0.7s infinite;
             animation: blink 0.7s infinite;
         }
-        @keyframes blink{
-            0% { opacity:1; }
-            50% { opacity:0; }
-            100% { opacity:1; }
+
+        @keyframes blink {
+            0% {
+                opacity: 1;
+            }
+            50% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
         }
-        @-webkit-keyframes blink{
-            0% { opacity:1; }
-            50% { opacity:0; }
-            100% { opacity:1; }
+
+        @-webkit-keyframes blink {
+            0% {
+                opacity: 1;
+            }
+            50% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
         }
-        @-moz-keyframes blink{
-            0% { opacity:1; }
-            50% { opacity:0; }
-            100% { opacity:1; }
+
+        @-moz-keyframes blink {
+            0% {
+                opacity: 1;
+            }
+            50% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
         }
 
     </style>
@@ -188,7 +209,7 @@
 <div id="container-fluid">
 
     <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-        <a class="navbar-brand" href="#" > <img src="assets/name.jpeg"style="height: 50px; width: 110px"></a>
+        <a class="navbar-brand" href="#"> <img src="assets/name.jpeg" style="height: 50px; width: 110px"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -215,153 +236,153 @@
         <canvas id="canvas"></canvas>
         <div class="content">
 
-            </div>
-
-
         </div>
+    </div>
 
 
-        <div id="container2">
-            <div style="height:500px;background-color:white; opacity:.9;font-size:36px">
-                <div class="col-lg-12 text-center">
-                    <h1 style="padding-top: 10px;">About</h1>
-                    <hr>
-
-                    Currently Under Construction.
-                    <br>Have a look around! <br>
-                    &#x2661; Christine
-                </div>
-            </div>
-
-        </div>
-
-        <div id="transcontainer2"></div>
-
-
-        <div id="container3">
+    <div id="container2">
+        <div style="height:500px;background-color:white; opacity:.9;font-size:36px">
             <div class="col-lg-12 text-center">
-
-                <h1 style="padding-top: 10px;">Projects</h1>
+                <h1 style="padding-top: 10px;">About</h1>
                 <hr>
-                Coming Soon, till then check out my GitHub.
-                <br>
-                <a href="https://github.com/christin3" title="Github" target="_blank">
-                    <i class="fa fa-github fa-5x " aria-hidden="true"></i></a>
+
+                Currently Under Construction.
+                <br>Have a look around! <br>
+                &#x2661; Christine
             </div>
         </div>
 
-        <div id="transcontainer3"></div>
+    </div>
 
-        <div id="container4">
-            <div style="height:500px;background-color:white; opacity:.8;font-size:36px">
+    <div id="transcontainer2"></div>
 
-                <section id="contact">
-                    <div class="container">
-                        <div class="row ">
-                            <div class="col-lg-12 text-center">
-                                <h1 style="padding-top: 10px;">Contact Me</h1>
-                                <hr>
-                            </div>
+
+    <div id="container3">
+        <div class="col-lg-12 text-center">
+
+            <h1 style="padding-top: 10px;">Projects</h1>
+            <hr>
+            Coming Soon, till then check out my GitHub.
+            <br>
+            <a href="https://github.com/christin3" title="Github" target="_blank">
+                <i class="fa fa-github fa-5x " aria-hidden="true"></i></a>
+        </div>
+    </div>
+
+    <div id="transcontainer3"></div>
+
+    <div id="container4">
+        <div style="height:500px;background-color:white; opacity:.8;font-size:36px">
+
+            <section id="contact">
+                <div class="container">
+                    <div class="row ">
+                        <div class="col-lg-12 text-center">
+                            <h1 style="padding-top: 10px;">Contact Me</h1>
+                            <hr>
                         </div>
-                        <div class="row ">
-                            <div class="col-lg-12 ">
+                    </div>
+                    <div class="row ">
+                        <div class="col-lg-12 ">
 
-                                <form name="sentMessage" id="contactForm" novalidate>
-                                    <div class="row control-group">
-                                        <div class="form-group col-lg-6 floating-label-form-group controls">
+                            <form name="sentMessage" id="contactForm" novalidate>
+                                <div class="row control-group">
+                                    <div class="form-group col-lg-6 floating-label-form-group controls">
 
-                                            <input type="text" class="form-control" placeholder="Name" id="name"
-                                                   required
-                                                   data-validation-required-message="Please enter your name.">
-                                            <p class="help-block text-danger"></p>
-                                        </div>
-
-                                        <div class="form-group col-lg-6 floating-label-form-group controls">
-
-                                            <input type="email" class="form-control" placeholder="Email Address"
-                                                   id="email" required
-                                                   data-validation-required-message="Please enter your email address.">
-                                            <p class="help-block text-danger"></p>
-                                        </div>
+                                        <input type="text" class="form-control" placeholder="Name" id="name"
+                                               required
+                                               data-validation-required-message="Please enter your name.">
+                                        <p class="help-block text-danger"></p>
                                     </div>
 
-                                    <div class="row control-group">
-                                        <div class="form-group col-lg-12 floating-label-form-group controls">
+                                    <div class="form-group col-lg-6 floating-label-form-group controls">
+
+                                        <input type="email" class="form-control" placeholder="Email Address"
+                                               id="email" required
+                                               data-validation-required-message="Please enter your email address.">
+                                        <p class="help-block text-danger"></p>
+                                    </div>
+                                </div>
+
+                                <div class="row control-group">
+                                    <div class="form-group col-lg-12 floating-label-form-group controls">
 
                                             <textarea rows="5" class="form-control" placeholder="Message" id="message"
                                                       required
                                                       data-validation-required-message="Please enter a message."></textarea>
-                                            <p class="help-block text-danger"></p>
-                                        </div>
+                                        <p class="help-block text-danger"></p>
                                     </div>
-                                    <br>
-                                    <div id="success"></div>
-                                    <div class="row">
-                                        <div class="form-group col-lg-8">
-                                            <button type="submit" class="btn">Send</button>
-                                        </div>
+                                </div>
+                                <br>
+                                <div id="success"></div>
+                                <div class="row">
+                                    <div class="form-group col-lg-8">
+                                        <button type="submit" class="btn">Send</button>
                                     </div>
-                                </form>
-                            </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
-                </section>
-            </div>
-
-            <div id="transcontainer4"></div>
-
-
-            <footer>
-                <p style="text-align: center;">
-
-                    <a href="https://www.linkedin.com/in/christinebaba" title="LinkedIn" target="_blank">
-                        <i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
-
-                    <a href="https://github.com/christin3" title="Github" target="_blank">
-                        <i class="fa fa-github fa-5x " aria-hidden="true"></i></a>
-
-                    <a href="mailto:baba.christine@gmail.com" title="email" target="_blank">
-                        <i class="fa fa-envelope-o fa-5x" aria-hidden="true"></i></a>
-
-                </p>
-                <p style="text-align: center;">
-                    © 2017 Christine Baba
-
-                </p>
-
-            </footer>
+                </div>
+            </section>
         </div>
-        <script>
+
+        <div id="transcontainer4"></div>
 
 
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function () {
-                        (i[r].q = i[r].q || []).push(arguments)
-                    }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        <footer>
+            <p style="text-align: center;">
 
-            ga('create', 'UA-88450814-1', 'auto');
-            ga('send', 'pageview');
+                <a href="https://www.linkedin.com/in/christinebaba" title="LinkedIn" target="_blank">
+                    <i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
 
-        </script>
-        <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
-                integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
-                crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
-                integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
-                crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
-                integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
-                crossorigin="anonymous"></script>
-        <script src='http://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js'></script>
-        <script src='http://cdnjs.cloudflare.com/ajax/libs/stats.js/r11/Stats.js'></script>
-        <script src="js/index.js"></script>
+                <a href="https://github.com/christin3" title="Github" target="_blank">
+                    <i class="fa fa-github fa-5x " aria-hidden="true"></i></a>
+
+                <a href="mailto:baba.christine@gmail.com" title="email" target="_blank">
+                    <i class="fa fa-envelope-o fa-5x" aria-hidden="true"></i></a>
+
+            </p>
+            <p style="text-align: center;">
+                © 2017 Christine Baba
+            </p>
+
+        </footer>
+    </div>
+</div>
+    <script>
+
+
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-88450814-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+            integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
+            integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+            crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
+            integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+            crossorigin="anonymous"></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js'></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/stats.js/r11/Stats.js'></script>
+    <script src="js/index.js"></script>
+    <script src="js/jqBootstrapValidation.js"></script>
+    <script src="js/contact_me.js"></script>
 
 </body>
 </html>
