--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             z-index: 1;
             background-color: transparent;
             width: 100%;
-            height: 500px;
+            height: 300px;
+            margin-left: 20px;
+            margin-right: 20px;
 
         }
 
@@ -61,7 +63,8 @@
             background-size: cover;
             background-position: center center;
             width: 100%;
-            height: 500px;
+            height: 300px;
+
         }
 
         #container2 {
@@ -72,6 +75,8 @@
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center center;
+            margin-left: 20px;
+            margin-right: 20px;
 
         }
 
@@ -155,6 +160,7 @@
             width: 100%;
         }
 
+
     </style>
 
 
@@ -172,7 +178,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
+            <div class="navbar-nav my-lg-0">
                 <a class="nav-item nav-link" href="#container2">About</a>
                 <a class="nav-item nav-link" href="#container3">Projects</a>
                 <a class="nav-item nav-link" href="#container4">Contact</a>
@@ -191,13 +197,13 @@
         <canvas id="canvas"></canvas>
         <div class="content">
 
-            <div class="container " style="height:200px; width:500px;background-color:white; opacity:.8;font-size:36px">
-                <div class="row text-center ">
-                    <div class="col-lg-12 fadeIn " style="margin-top: 75px ">
-                        Welcome to My Site!
-                    </div>
-                </div>
-            </div>
+            <!--<div class="container " style="height:200px; width:500px;background-color:white; opacity:.8;font-size:36px">-->
+                <!--<div class="row text-center ">-->
+                    <!--<div class="col-lg-12 fadeIn " style="margin-top: 75px ">-->
+                        <!--Welcome to My Site!-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
 
 
         </div>
@@ -207,7 +213,7 @@
     <div id="container2">
         <div style="height:500px;background-color:white; opacity:.9;font-size:36px">
             <div class="col-lg-12 text-center ">
-                <h1 style="padding-top: 10px;">{About}</h1>
+                <h1 style=" padding-top: 25px; padding-bottom: 10px; font-size: 45px">{About}</h1>
                 <hr>
 
                 Currently Under Construction.
@@ -226,7 +232,7 @@
     <div id="container3" class=" text-center">
 
 
-        <h1 style="padding-top: 10px;">{Projects}</h1>
+        <h1 style=" padding-top: 25px; padding-bottom: 10px; font-size: 45px">{Projects}</h1>
         <hr>
         <!-- Portfolio Grid Section -->
         <section id="portfolio">
@@ -527,8 +533,9 @@
                     <div class="container">
                         <div class="row ">
                             <div class="col-lg-12 text-center">
-                                <h1 style="padding-top: 10px;">{Contact Me}</h1>
+                                <h1 style=" padding-top: 25px; padding-bottom: 10px; font-size: 45px">{Contact Me}</h1>
                                 <hr>
+                                <br>
                             </div>
                         </div>
                         <div class="row ">
@@ -563,7 +570,6 @@
                                             <p class="help-block text-danger"></p>
                                         </div>
                                     </div>
-                                    <br>
                                     <div id="success"></div>
                                     <div class="row">
                                         <div class="form-group">
@@ -577,12 +583,14 @@
                 </section>
             </div>
         </div>
+        <br>
 
         <div id="transcontainer4"></div>
 
 
         <footer>
             <p style="text-align: center;">
+                <br>
 
                 <a href="https://www.linkedin.com/in/christinebaba" title="LinkedIn" target="_blank">
                     <i class="fa fa-linkedin-square fa-5x" aria-hidden="true"></i></a>
