--- a/index.html
+++ b/index.html
@@ -11,158 +11,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <style>
-        #container-fluid {
-            z-index: 0;
-
-        }
-
-        body {
-            font-family: "Shree Devanagari 714";
-
-        }
-
-        canvas {
-            z-index: 1;
-            background-color: transparent;
-            width: 100%;
-            height: 300px;
-            margin-left: 20px;
-            margin-right: 20px;
-
-        }
-
-        .content {
-            position: absolute;
-            top: 18vh;
-            z-index: 0;
-            left: 0;
-            padding: 0;
-            width: 100%;
-            text-align: center;
-            visibility: visible;
-            background-color: transparent;
-
-        }
-
-        a {
-            font-size: 16px;
-            font-family: "Shree Devanagari 714";
-            color: gray;
-        }
-
-        p {
-            font-family: "Shree Devanagari 714";
-            color: gray;
-        }
-
-        #container1 {
-            background-attachment: fixed;
-            background-image: url("assets/milkyway.jpg");
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center center;
-            width: 100%;
-            height: 300px;
-
-        }
-
-        #container2 {
-            width: 100%;
-            height: 600px;
-            background-attachment: fixed;
-            background-color: white;
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center center;
-            margin-left: 20px;
-            margin-right: 20px;
-
-        }
-
-        #transcontainer2 {
-            width: 100%;
-            height: 300px;
-            background-attachment: fixed;
-            background-image: url("assets/Liberty-Bell-new-tech-101-flat-layers-em.jpg");
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center center;
-
-        }
-
-        #container3 {
-            width: 100%;
-            height: 600px;
-            background-attachment: fixed;
-            background-color: white;
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center center;
-
-        }
-
-        #transcontainer3 {
-            width: 100%;
-            height: 300px;
-            background-attachment: fixed;
-            background-image: url("assets/Cosmic Tree - APOD submission_small.jpg");
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center center;
-
-        }
-
-        #container4 {
-            width: 100%;
-            height: 600px;
-            background-attachment: fixed;
-            background-color: white;
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center center;
-
-        }
-
-        #transcontainer4 {
-            width: 100%;
-            height: 300px;
-            background-attachment: fixed;
-            background-image: url("assets/PinnaclesGalaxy_Goh_2400.jpg");
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center center;
-
-        }
-
-        .navbar {
-            position: fixed;
-            width: 100%;
-            z-index: 1;
-            background-color: white;
-
-        }
-
-        #inner {
-            width: 50%;
-            margin: 0 auto;
-            background-image: url("assets/name.jpeg");
-            background-size: 100%;
-            background-repeat: no-repeat;
-
-            background-position: center center;
-        }
-
-        #footer {
-            display: table;
-            text-align: center;
-            margin: auto;
-            width: 100%;
-        }
 
 
-    </style>
-
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
 
 </head>
 
@@ -170,7 +21,9 @@
 <div id="container-fluid">
 
     <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+
         <a class="navbar-brand" href="#"> <img src="assets/name.jpeg" style="height: 50px; width: 110px"></a>
+
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -178,7 +31,9 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav my-lg-0">
+
+            <div class="navbar-nav">
+
                 <a class="nav-item nav-link" href="#container2">About</a>
                 <a class="nav-item nav-link" href="#container3">Projects</a>
                 <a class="nav-item nav-link" href="#container4">Contact</a>
@@ -187,7 +42,9 @@
                    onClick="location.href='https://github.com/christin3/Christine/blob/master/assets/ChristineBabaResume.pdf'">
                     Resume
                 </a>
+
             </div>
+
         </div>
 
     </nav>
@@ -198,11 +55,11 @@
         <div class="content">
 
             <!--<div class="container " style="height:200px; width:500px;background-color:white; opacity:.8;font-size:36px">-->
-                <!--<div class="row text-center ">-->
-                    <!--<div class="col-lg-12 fadeIn " style="margin-top: 75px ">-->
-                        <!--Welcome to My Site!-->
-                    <!--</div>-->
-                <!--</div>-->
+            <!--<div class="row text-center ">-->
+            <!--<div class="col-lg-12 fadeIn " style="margin-top: 75px ">-->
+            <!--Welcome to My Site!-->
+            <!--</div>-->
+            <!--</div>-->
             <!--</div>-->
 
 
