--- a/index.html
+++ b/index.html
@@ -462,11 +462,12 @@
             <p style="text-align: center;">
                 © 2017 Christine Baba
             </p>
+
+            <a href="http://www.beyondsecurity.com/vulnerability-scanner-verification/www.christinebaba.com"><img src="https://seal.beyondsecurity.com/verification-images/www.christinebaba.com/vulnerability-scanner-2.gif" alt="Website Security Test" border="0" /></a>
         </footer>
     </div>
 </div>
 <script>
-
 
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
@@ -486,7 +487,6 @@
 </script>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
         integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
         crossorigin="anonymous"></script>
