--- a/index.html
+++ b/index.html
@@ -389,58 +389,58 @@
         <div id="container4">
             <div style="height:500px;background-color:white; opacity:.8;font-size:36px">
 
-                <section id="contact">
-                    <div class="container">
-                        <div class="row ">
-                            <div class="col-lg-12 text-center">
-                                <h1 style=" padding-top: 25px; padding-bottom: 10px; ">{Contact Me}</h1>
-                                <hr>
-                                <br>
-                            </div>
-                        </div>
-                        <div class="row ">
-                            <div class="col-lg-12 ">
+                <!--<section id="contact">-->
+                    <!--<div class="container">-->
+                        <!--<div class="row ">-->
+                            <!--<div class="col-lg-12 text-center">-->
+                                <!--<h1 style=" padding-top: 25px; padding-bottom: 10px; ">{Contact Me}</h1>-->
+                                <!--<hr>-->
+                                <!--<br>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="row ">-->
+                            <!--<div class="col-lg-12 ">-->
 
-                                <form method="POST" action="http://formspree.io/baba.christine@gmail.com">
-                                    <div class="row control-group">
-                                        <div class="form-group col-lg-6 floating-label-form-group controls">
+                                <!--<form method="POST" action="http://formspree.io/baba.christine@gmail.com">-->
+                                    <!--<div class="row control-group">-->
+                                        <!--<div class="form-group col-lg-6 floating-label-form-group controls">-->
 
-                                            <input type="text" class="form-control" placeholder="Name" id="name"
-                                                   name="name" required
-                                                   data-validation-required-message="Please enter your name.">
-                                            <p class="help-block text-danger"></p>
-                                        </div>
+                                            <!--<input type="text" class="form-control" placeholder="Name" id="name"-->
+                                                   <!--name="name" required-->
+                                                   <!--data-validation-required-message="Please enter your name.">-->
+                                            <!--<p class="help-block text-danger"></p>-->
+                                        <!--</div>-->
 
-                                        <div class="form-group col-lg-6 floating-label-form-group controls">
+                                        <!--<div class="form-group col-lg-6 floating-label-form-group controls">-->
 
-                                            <input type="email" class="form-control" placeholder="Email Address"
-                                                   id="email" name="email" required
-                                                   data-validation-required-message="Please enter your email address.">
-                                            <p class="help-block text-danger"></p>
-                                        </div>
-                                    </div>
+                                            <!--<input type="email" class="form-control" placeholder="Email Address"-->
+                                                   <!--id="email" name="email" required-->
+                                                   <!--data-validation-required-message="Please enter your email address.">-->
+                                            <!--<p class="help-block text-danger"></p>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
 
-                                    <div class="row control-group">
-                                        <div class="form-group col-lg-12 floating-label-form-group controls">
+                                    <!--<div class="row control-group">-->
+                                        <!--<div class="form-group col-lg-12 floating-label-form-group controls">-->
 
-                                            <textarea rows="5" class="form-control" placeholder="Message"
-                                                      name="message " id="message"
-                                                      required
-                                                      data-validation-required-message="Please enter a message."></textarea>
-                                            <p class="help-block text-danger"></p>
-                                        </div>
-                                    </div>
-                                    <div id="success"></div>
-                                    <div class="row">
-                                        <div class="form-group">
-                                            <button type="submit" class="btn">Send</button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </section>
+                                            <!--<textarea rows="5" class="form-control" placeholder="Message"-->
+                                                      <!--name="message " id="message"-->
+                                                      <!--required-->
+                                                      <!--data-validation-required-message="Please enter a message."></textarea>-->
+                                            <!--<p class="help-block text-danger"></p>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                    <!--<div id="success"></div>-->
+                                    <!--<div class="row">-->
+                                        <!--<div class="form-group">-->
+                                            <!--<button type="submit" class="btn">Send</button>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                <!--</form>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</section>-->
             </div>
         </div>
         <br>
